update openapi file, fixes to device service
